k8s/netpol-allpods-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allpods-deny-all
spec:
  podSelector: {}
  policyTypes:   
  - Ingress   
  - Egress
