k8s/netpol-sqlapi-allow-egress-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sqlapi-allow-egress-all
spec:
  podSelector:
    matchLabels:
      run: sqlapi
  policyTypes:   
  - Ingress   
  - Egress
  egress:
  - {}
