k8s/netpol-sqlapi-allow-egress-ifconfigco.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sqlapi-allow-some
spec:
  podSelector:
    matchLabels:
      run: sqlapi
  policyTypes:   
  - Egress
  ingress:
  - namespaceSelector:
      matchLabels:
        namespace: default
  egress:
  - to:
    - ipBlock:
        cidr: 104.28.18.94/32
    - ipBlock:
        cidr: 104.28.19.94/32
