k8s/netpol-sqlapi-allow-some.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sqlapi-allow-some
spec:
  podSelector:
    matchLabels:
      run: sqlapi
  policyTypes:   
  - Ingress   
  - Egress
  # Ingress policy: other URLs such as ifconfig.co or jsonip.com are missing
  # Does DNS need to be explicity allowed?
  ingress:
  - namespaceSelector:
      matchLabels:
        namespace: default
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.2.0/24
    - ipBlock:
        cidr: 8.8.8.8/32
