k8s/netpol-sqlweb-allow-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-all
spec:
  podSelector:
    matchLabels:
      run: sqlweb
  policyTypes:   
  - Ingress   
  - Egress
  ingress:
    - {}
  egress:
    - {}
